Even if user has SafeBrowsing Extended Reporting enabled, we want to refrain from sending a hit report when the user is in incognito mode.

BUG=689149

Review-Url: https://codereview.chromium.org/2886043002
Cr-Commit-Position: refs/heads/master@{#473360}

Former-commit-id: cdcd0b7cbe1630435abab4a03ca0543752138b56