components/safe_browsing/base_ui_manager.cc
@@ -245,10 +245,11 @@ void BaseUIManager::ShowBlockingPageForResource(
 }
 
 // A safebrowsing hit is sent after a blocking page for malware/phishing
-// or after the warning dialog for download urls, only for
-// UMA || extended_reporting users.
+// or after the warning dialog for download urls, only for extended_reporting
+// users who are not in incognito mode.
 void BaseUIManager::MaybeReportSafeBrowsingHit(
-    const HitReport& hit_report) {
+    const HitReport& hit_report,
+    content::WebContents* web_contents) {
   DCHECK_CURRENTLY_ON(BrowserThread::UI);
   return;
 }
